fix: text overflow

--- a/src/components/Output/Output.css
+++ b/src/components/Output/Output.css
@@ -13,6 +13,19 @@
         height: 200px;
         width: 400px;
     }
+    .information{
+        display: flex;
+        flex-direction: row;
+        width: 60%;
+        justify-content: space-between;
+    }
+    .limiter{
+        display: flex;
+        flex-direction: row;
+    }
+    .limiter > p{
+        font-size: 0.9rem;
+    }
     .placeholder-text{
         height: 100%;
         width: 100%;
@@ -77,6 +90,9 @@
     .limiter{
         display: flex;
         flex-direction: row;
+    }
+    .limiter > p{
+        font-size: 0.9rem;
     }
     .placeholder-text{
         height: 100%;
