--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -1,6 +1,5 @@
 @media(max-width:768px){
     .tab-bar{
-        height: 150px;
         display: flex;
         flex-direction: row;
         width: 100%;
